--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,13 @@ name = "compare-files"
 version = "0.1.0"
 edition = "2021"
 authors = ["Robin Quintero <rohaquinlop301@gmail.com>"]
+license = "MIT"
+description = "A simple CLI to compare two files and show the differences."
+readme = "README.md"
+homepage = "https://github.com/rohaquinlop/rust-compare-files"
+repository = "https://github.com/rohaquinlop/rust-compare-files"
+keywords = ["cli", "compare", "files"]
+categories = ["command-line-utilities"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
